--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,13 +20,10 @@ jobs:
 
       - name: Check hashes
         run: |
-          d='[0-9]'
-          sub="s/$d$d$d$d-$d$d-$d$d/YYYY-MM-DD/g"
-
-          sed -i '' -e $sub mod.ts
+          sed -i '' -e 's/[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]$/YYYY-MM-DD/g' mod.ts
           md5sum devices.json mod.ts > hash.md5
 
           deno run --no-check --quiet --allow-read=devices --allow-write=devices.json,mod.ts --allow-run=deno generate.ts
 
-          sed -i '' -e $sub mod.ts
+          sed -i '' -e 's/[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]$/YYYY-MM-DD/g' mod.ts
           md5sum --check hash.md5
