--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,12 +24,10 @@ jobs:
         # day.
         # NOTE: On ubuntu, the argument to -i is optional.
         run: |
-          sed -i -e 's/[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]$/YYYY-MM-DD/g' mod.ts
-          head mod.ts
+          sed -i -e 's/[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]/YYYY-MM-DD/g' mod.ts
           md5sum devices.json mod.ts > hash.md5
 
           deno run --no-check --quiet --allow-read=devices --allow-write=devices.json,mod.ts --allow-run=deno generate.ts
 
-          sed -i -e 's/[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]$/YYYY-MM-DD/g' mod.ts
-          head mod.ts
+          sed -i -e 's/[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]/YYYY-MM-DD/g' mod.ts
           md5sum --check hash.md5
