--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           sed -i -e 's/[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]/YYYY-MM-DD/g' mod.ts
           md5sum devices.json mod.ts > hash.md5
 
-          deno run --no-check --quiet --allow-read=devices --allow-write=devices.json,mod.ts --allow-run=deno generate.ts
+          deno run --no-check --quiet --allow-read=devices --allow-write=devices.json,mod.ts --allow-run=deno build.ts
 
           sed -i -e 's/[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]/YYYY-MM-DD/g' mod.ts
           md5sum --check hash.md5
