--- a/devices/AppleWatch.json
+++ b/devices/AppleWatch.json
@@ -22,10 +22,10 @@
   "Apple Watch Series 5 (GPS + Cellular) 40mm": "Watch5,3",
   "Apple Watch Series 5 (GPS + Cellular) 44mm": "Watch5,4",
 
-  "Apple Watch SE (GPS) 40mm": "Watch5,9",
-  "Apple Watch SE (GPS) 44mm": "Watch5,10",
-  "Apple Watch SE (GPS + Cellular) 40mm": "Watch5,11",
-  "Apple Watch SE (GPS + Cellular) 44mm": "Watch5,12",
+  "Apple Watch SE (2020, GPS) 40mm": "Watch5,9",
+  "Apple Watch SE (2020, GPS) 44mm": "Watch5,10",
+  "Apple Watch SE (2020, GPS + Cellular) 40mm": "Watch5,11",
+  "Apple Watch SE (2020, GPS + Cellular) 44mm": "Watch5,12",
 
   "Apple Watch Series 6 (GPS) 40mm": "Watch6,1",
   "Apple Watch Series 6 (GPS) 44mm": "Watch6,2",
@@ -37,10 +37,10 @@
   "Apple Watch Series 7 (GPS + Cellular) 41mm": "Watch6,8",
   "Apple Watch Series 7 (GPS + Cellular) 45mm": "Watch6,9",
 
-  "Apple Watch SE (GPS) 40mm": "Watch6,10",
-  "Apple Watch SE (GPS) 44mm": "Watch6,11",
-  "Apple Watch SE (GPS + Cellular) 40mm": "Watch6,12",
-  "Apple Watch SE (GPS + Cellular) 44mm": "Watch6,13",
+  "Apple Watch SE (2022, GPS) 40mm": "Watch6,10",
+  "Apple Watch SE (2022, GPS) 44mm": "Watch6,11",
+  "Apple Watch SE (2022, GPS + Cellular) 40mm": "Watch6,12",
+  "Apple Watch SE (2022, GPS + Cellular) 44mm": "Watch6,13",
 
   "Apple Watch Series 8 (GPS) 41mm": "Watch6,14",
   "Apple Watch Series 8 (GPS) 45mm": "Watch6,15",
